# vdjmatchR

./: .Rbuildignore  .gitignore  404.html  DESCRIPTION  IMPLEMENTATION.html  IMPLEMENTATION.md  LICENSE  LICENSE-text.html  LICENSE-text.md  LICENSE.html  LICENSE.md  NAMESPACE  README.md  _pkgdown.yml  authors.html  authors.md  extra.css  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
R/: RDatabase.R  db_to_table.R  extendr-wrappers.R  match.R  package.R  seurat_vdj.R  tcrdist.R  vdjdb.R  vdjdb_helpers.R  zzz.R
articles/: batch-matching.html  batch-matching.md  database-management.html  database-management.md  getting-started.html  getting-started.md  index.html  index.md  scoring-and-scope.html  scoring-and-scope.md  seurat-vdj-integration.html  seurat-vdj-integration.md  tcr-motif-analysis.html  tcr-motif-analysis.md  tcrdist-analysis.html
blob/: logo.ai
man/: RDatabase.Rd  calculate_tcrdist.Rd  db_summary.Rd  db_to_df.Rd  db_to_table.Rd  filter_db.Rd  filter_db_by_epitope_size.Rd  match_tcr.Rd  match_tcr_df.Rd  match_tcr_many.Rd  match_tcr_many_df.Rd  tcrdist_single.Rd  vdj_attach_10x_vdj_v2.Rd  vdj_attach_10x_vdj_v2_batch.Rd  vdj_collapse_pairs_seurat.Rd  vdjdb_download.Rd  vdjdb_ensure.Rd  vdjdb_ensure_into.Rd  vdjdb_len.Rd  vdjdb_open.Rd  vdjdb_open_file.Rd  vdjdb_open_packaged.Rd  vdjdb_packaged_path.Rd  vdjdb_path.Rd  vdjdb_set_user_db.Rd  vdjdb_update.Rd  (+4 more)
src/rust/: Cargo.toml  build.rs
src/rust/src/: alignment.rs  database.rs  error.rs  filtering.rs  lib.rs  matching.rs  scoring.rs  sequence.rs  tcrdist.rs  utils.rs
(+90 files in other folders)
