[package]
name = "vdjmatchR"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
extendr-api = "0.6"
rayon = "1"
serde = { version = "1", features = ["derive"] }
csv = "1"
dirs = "5"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
thiserror = "1"
regex = "1"
lazy_static = "1"
flate2 = "1"

## No build-dependencies: wrapper generation handled in R configure step
